@@ -1,0 +1,18 @@
+# At  2010-10-15 18:38:56.27626 
+# SVN  2300M 
+             DEoptim   RcppDE ratioRcppToBasic pctGainOfRcpp
+Rastrigin2  0.040167 0.040000          0.99585      0.414938
+Rastrigin5  0.106500 0.105778          0.99322      0.678143
+Rastrigin20 0.548167 0.548444          1.00051     -0.050674
+Wild2       0.066278 0.065944          0.99497      0.502934
+Wild5       0.181667 0.181500          0.99908      0.091743
+Wild20      1.037556 1.035389          0.99791      0.208824
+Genrose2    0.070056 0.070444          1.00555     -0.555115
+Genrose5    0.185389 0.186500          1.00599     -0.599341
+Genrose20   0.890278 0.887889          0.99732      0.268331
+Genrose50   2.517944 2.515389          0.99899      0.101494
+MEANS       0.564400 0.563728          0.99881      0.119104
+
+
+
+
